--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>Baixar Vídeo do YouTube</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dia dos Namorados</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Em Breve</h1>
+    <div class="card">
+        <div class="header">
+            Feliz Dia dos Namorados, Meuu amorr
+        </div>
+        <div class="message">
+            ❤️Jennifer❤️
+            <br><br>
+            Neste Dia dos Namorados, quero te lembrar de como você ilumina minha vida de maneiras que nem consigo descrever. Cada momento ao seu lado é especial, e sinto uma gratidão imensa por ter você comigo.
+            <br><br>
+            Você é a razão dos meus sorrisos, o conforto nos meus dias difíceis e a inspiração para ser uma pessoa melhor. Seu carinho, sua compreensão e sua presença constante fazem de cada dia uma nova oportunidade de ser feliz.
+            <br><br>
+            Você é a melhor, minha confidente e a pessoa com quem eu escolho compartilhar todos os momentos, sejam eles de risos ou lágrimas. Sua presença me conforta, e seu sorriso ilumina meus dias, fazendo eu ser a pessoa mais sortuda do mundo
+            <br><br>
+            Obrigado por ser minha parceira, minha confidente e meu amor. Neste Dia dos Namorados, celebro não apenas o nosso amor, mas também a mulher incrível que você é. Que possamos continuar construindo juntos essa linda história de amor, repleta de sonhos, realizações e felicidade.
+        </div>
+        <div class="footer">
+            Com todo o meu amor,<br>
+            Diego
+        </div>
+    </div>
 </body>
 </html>
