--- a/index.html
+++ b/index.html
@@ -4,7 +4,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dia dos Namorados</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffe6e6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .card {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin: 20px;
+            text-align: center;
+            max-width: 90%;
+        }
+        .header {
+            background-color: #ff9999;
+            color: #fff;
+            padding: 10px;
+            border-radius: 10px 10px 0 0;
+            font-size: 20px;
+        }
+        .message {
+            padding: 20px;
+            font-size: 16px;
+            line-height: 1.6;
+        }
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+    </style>
+</head>
+<body>
+    <div class="card">
+        <div class="header">
+            Feliz Dia dos Namorados, Meuu amorr
+        </div>
+        <div class="message">
+            ❤️Jennifer❤️
+            <br><br>
+            Neste Dia dos Namorados, quero te lembrar de como você ilumina minha vida de maneiras que nem consigo descrever. Cada momento ao seu lado é especial, e sinto uma gratidão imensa por ter você comigo.
+            <br><br>
+            Você é a razão dos meus sorrisos, o conforto nos meus dias difíceis e a inspiração para ser uma pessoa melhor. Seu carinho, sua compreensão e sua presença constante fazem de cada dia uma nova oportunidade de ser feliz.
+            <br><br>
+            Você é a melhor, minha confidente e a pessoa com quem eu escolho compartilhar todos os momentos, sejam eles de risos ou lágrimas. Sua presença me conforta, e seu sorriso ilumina meus dias, fazendo eu ser a pessoa mais sortuda do mundo
+            <br><br>
+            Obrigado por ser minha parceira, minha confidente e meu amor. Neste Dia dos Namorados, celebro não apenas o nosso amor, mas também a mulher incrível que você é. Que possamos continuar construindo juntos essa linda história de amor, repleta de sonhos, realizações e felicidade.
+        </div>
+        <div class="footer">
+            Com todo o meu amor,<br>
+            Diego
+        </div>
+    </div>
+</body>
+</html><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dia dos Namorados</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffe6e6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .card {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin: 20px;
+            text-align: center;
+            max-width: 90%;
+        }
+        .header {
+            background-color: #ff9999;
+            color: #fff;
+            padding: 10px;
+            border-radius: 10px 10px 0 0;
+            font-size: 20px;
+        }
+        .message {
+            padding: 20px;
+            font-size: 16px;
+            line-height: 1.6;
+        }
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
     <div class="card">
