--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             ❤️Jennifer❤️
         </div>
         <div class="content">
-            <p>Neste Dia dos Namorados, quero te lembrar de como você ilumina minha vida de maneiras que nem consigo descrever. Cada momento ao seu lado é especial, e sinto uma gratidão imensa por ter você comigo.</p>
+            <p>Quero te lembrar de como você ilumina minha vida de maneiras que nem consigo descrever. Cada momento ao seu lado é especial, e sinto uma gratidão imensa por ter você comigo.</p>
             <p>Você é a razão dos meus sorrisos, o conforto nos meus dias difíceis e a inspiração para ser uma pessoa melhor. Seu carinho, sua compreensão e sua presença constante fazem de cada dia uma nova oportunidade de ser feliz.</p>
             <p>Você é a melhor, minha confidente e a pessoa com quem eu escolho compartilhar todos os momentos, sejam eles de risos ou lágrimas. Sua presença me conforta, e seu sorriso ilumina meus dias, fazendo eu ser a pessoa mais sortuda do mundo.</p>
             <p>Obrigado por ser minha parceira, minha confidente e meu amor. Neste Dia dos Namorados, celebro não apenas o nosso amor, mas também a mulher incrível que você é. Que possamos continuar construindo juntos essa linda história de amor, repleta de sonhos, realizações e felicidade.</p>
