--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div class="card">
         <div class="header">
-            Feliz Dia dos Namorados, Meuu amorr<br>
+            Meuu amorzinhoo<br>
             ❤️Jennifer❤️
         </div>
         <div class="content">
